--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -218,6 +218,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/azureResources.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/azureSubscriptions.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/vendors.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
 <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
