--- a/code/dev/parts/help/contactus.html
+++ b/code/dev/parts/help/contactus.html
@@ -16,7 +16,7 @@
             <br>
           </p>
           <p>
-            You can also email us at <a href="mailto:support@revapm.com">support@revapm.com</a> or call <a href="tel:+14084771738">+1 (408) 477-1738</a>
+            You can also email us at <a href="mailto:{{vendorConfig.support_email}}">{{vendorConfig.support_email}}</a> or call <a href="tel:+14084771738">+1 (408) 477-1738</a>
           </p>
           <ul>
             <li>
@@ -25,11 +25,11 @@
             </li>
             <li>
               <a href="https://revapm.zendesk.com/hc/en-us" target="_blank">
-                <i class="glyphicon glyphicon-new-window"></i> RevAPM Knowledge Base</a>
+                <i class="glyphicon glyphicon-new-window"></i> Knowledge Base</a>
             </li>
             <li>
               <a href="http://status.revapm.net/" target="_blank">
-                <i class="glyphicon glyphicon-new-window"></i> RevAPM Network Status</a>
+                <i class="glyphicon glyphicon-new-window"></i> Network Status</a>
             </li>
             <li>
               <a href="" ng-click="onGetBillingZonesDetails($event)">Detailed Information About Billing Zones</a>
