--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -1,6 +1,6 @@
 <section drawer ng-hide="isHide">
   <a href="https://www.revapm.com/" id="logo" target="_blank">
-    <img src="images/logo_color.png" alt="Logo" />
+    <img src="images/{{vendor}}/logo.png" alt="Logo" />
   </a>
   <ul class="side-menu">
     <dashboard-nav-menu></dashboard-nav-menu>
