--- a/code/dev/parts/signup/billing_plans.html
+++ b/code/dev/parts/signup/billing_plans.html
@@ -24,7 +24,7 @@
                         <div class="col-md-12">
                             <div class="text-center">
                                 <h4 class="">
-                                    The world of mobile app and web acceleration is just a few minutes away.<br> Please select your RevAPM billing plan:
+                                    The world of mobile app and web acceleration is just a few minutes away.<br> Please select your billing plan:
                                 </h4>
                             </div>
                         </div>
