--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <div class="plans-heading center-block">
         <div class="text-center">
-          <h2 class="text-capitalize">RevAPM billing plans</h2>
+          <h2 class="text-capitalize">Billing plans</h2>
           <p class="text-muted">The world of mobile app and web acceleration is just a few minutes away.</p>
 
           <h4 class="text-info"><b>One month free trial - NO CREDIT CARD REQUIRED</b></h4>
