--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -62,7 +62,7 @@
                 </div>
               </form>
               <p class="lead pull-right">
-                If the problem persist please contact us at <a href="mailto:support@revapm.com?&subject=Verification%20Problem">support@revapm.com</a>.
+                If the problem persist please contact us at <a href="mailto:{{vendorConfig.support_email}}?&subject=Verification%20Problem">{{vendorConfig.support_email}}</a>.
               </p>
             </div>
           </div>
