--- a/code/dev/parts/staging-environment/staging-environment.tpl.html
+++ b/code/dev/parts/staging-environment/staging-environment.tpl.html
@@ -11,7 +11,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-body">
-            <p>Before sending ("publishing" in our terms) your updated domain configuration to the global network (and making it available for all end users of your website) you have a simple way to test the configuration in a "sandbox" ("staging" in our terms) environment. The environment is available for RevAPM customers, similar to the global network configuration but is not used to serve real end users.</p>
+            <p>Before sending ("publishing" in our terms) your updated domain configuration to the global network (and making it available for all end users of your website) you have a simple way to test the configuration in a "sandbox" ("staging" in our terms) environment. The environment is available for customers, similar to the global network configuration but is not used to serve real end users.</p>
             <!--  <div class="alert alert-info" ng-if="$ctrl._loading">
               <i class="glyphicon glyphicon-refresh spin" ng-if="$ctrl._loading"></i>&nbsp; Please waite few moment...
               </div> -->
