--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -24,7 +24,7 @@
                 <div class="col-xs-12 "></div>
               </div>
               <div class="form-group " ng-if="$state.current.data.platform_code=='iOS' ">
-                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to download the latest version of RevAPM mobile SDK">
+                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to download the latest version of mobile SDK">
                   <i class="glyphicon glyphicon-cloud-download "></i>&nbsp; Download SDK
                 </a>
               </div>
@@ -231,7 +231,7 @@
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <label for="domains_white_list" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="'White list' of domains which are allowed to be served via RevAPM (all other domains will be served directly from the customer origin server)">
+              <label for="domains_white_list" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="'White list' of domains which are allowed to be served (all other domains will be served directly from the customer origin server)">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="editForm.domainsWhiteList.$error" role="alert" ng-messages-multiple>
