--- a/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
@@ -47,7 +47,7 @@
             Backend Name *</label>
           <div class="col-sm-9">
             <input type="text" class="form-control inline-block" ng-model="item.name" ng-disabled="_loading" id="origin_host_header" name="backendName" placeholder="" ng-maxlength="255" required>
-            <label for="backendName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the field to name the backend. In VCL functions the backend can be referenced using RevAPM internal function “REV_BACKEND()">
+            <label for="backendName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the field to name the backend. In VCL functions the backend can be referenced using internal function “REV_BACKEND()">
               <i class="fa fa-question-circle"></i>
             </label>
             <div class="error-messages" ng-messages="customVclBackendForm.backendName.$error" role="alert" ng-messages-multiple>
