--- a/code/dev/parts/profile/goodbye.html
+++ b/code/dev/parts/profile/goodbye.html
@@ -15,7 +15,7 @@
 
           <br>
             <address>
-               - The RevAPM Team
+               - Team
             </address>
 
         </div>
