--- a/code/dev/parts/signup/form-short-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-signup.tpl.html
@@ -5,7 +5,7 @@
           <div class="col-xs-offset-1 col-xs-10">
               <h4>Please finish your registration</h4>
               <p class="lead">
-                  We have sent an email with verification link to email address <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link (don't forget to check your Spam mailbox too).
+                  We have sent an email with verification link to email address <b>{{$ctrl.model.email}}</b> - please continue registration process by following the link (don't forget to check your Spam mailbox too).
               </p>
               <div class="clearfix">
                   <button type="text" class="btn btn-warning pull-right" ng-click="$ctrl.onRepeatSendRegistrationEmail($ctrl.model.email,$ctrl.model.password)">Didn’t receive the email?</button>
