--- a/code/dev/parts/domains/domain-lua-scripting/domain-lua-scripting.tpl.html
+++ b/code/dev/parts/domains/domain-lua-scripting/domain-lua-scripting.tpl.html
@@ -7,7 +7,7 @@
         </p>
         <ul>
           <li>The Lua support is implemented using Nginx module “lua-nginx-module” - please see <a target="_blank" href="https://github.com/openresty/lua-nginx-module"> https://github.com/openresty/lua-nginx-module</a> for additional details</li>
-          <li>Please note that the Lua code is manually reviewed and approved by customer support engineers before deploying it in the global network. Engineers are notified automatically about submitted Lua code changes so there is no need to open a separate support ticket asking to approve the code.</li>
+          <li>Please note that the Lua code is manually reviewed and approved by CDN customer support engineers before deploying it in the global network. CDN engineers are notified automatically about submitted Lua code changes so there is no need to open a separate support ticket asking to approve the code.</li>
         </ul>
       </div>
     </div>
