--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -262,7 +262,7 @@
               </div>
             </div>
             <div class="form-group" ng-if="model.billing_id && model.subscription_id">
-              <p class="col-md-12 text text-center"> To update your billing address (as it will appears on your statements) please click on “Update Payment Profile” button and provide the information together with credit card details.</p>
+              <p class="col-md-12 text text-center"> To update your billing address (as it will appears on your {{vendorConfig.companyNameShort}} statements) please click on “Update Payment Profile” button and provide the information together with credit card details.</p>
             </div>
             <!--
             <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">
