--- a/code/dev/parts/signup/form-contact-info.tpl.html
+++ b/code/dev/parts/signup/form-contact-info.tpl.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="lead">
-          We have sent an email with verification link to your email address <b>{{$ctrl.model.email}}</b> - please continue registration process by following the link. Please also check your Spam mailbox.
+          We have sent an email with verification link to your email address <b>{{$ctrl.model.email}}</b> - please continue the registration process by following the link. Please also check your Spam mailbox.
         </p>
         <p class="lead">
           <!-- Now you can close the browser window. -->
