--- a/code/dev/parts/ssl_names/modal/modal-message-verification-error.tpl.html
+++ b/code/dev/parts/ssl_names/modal/modal-message-verification-error.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
   <div class="modal-message-verification-error" ng-if="!model.error">
-    <p>It looks like the domain administrator has not yet confirmed that the domain name can be added to shared SSL certificate - please double-check the GlobalSign’s confirmation email.</p>
+    <p>It looks like the domain administrator has not yet confirmed that the domain name can be added to the shared SSL certificate - please double-check the GlobalSign’s confirmation email.</p>
     <p> Please note that it may take up to 10 minutes to update the status of the backend system.
     </p>
   </div>
