--- a/code/dev/parts/reports/mobile-distributions.html
+++ b/code/dev/parts/reports/mobile-distributions.html
@@ -54,7 +54,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Origin Traffic Distribution By Requests</h3>
+              <h3>Origin/{{vendorConfig.companyNameShort}} Traffic Distribution By Requests</h3>
 
               <!-- <div class="alert alert-info" ng-hide="_loading || destination_hits.length">
                 No data to display
@@ -67,7 +67,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Origin Traffic Distribution By Traffic</h3>
+              <h3>Origin/{{vendorConfig.companyNameShort}} Traffic Distribution By Traffic</h3>
              <!--  <div class="alert alert-info" ng-hide="_loading || destination_gbt.length">
                 No data to display
               </div>
