--- a/code/dev/parts/ssl_names/new.html
+++ b/code/dev/parts/ssl_names/new.html
@@ -3,7 +3,7 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Please confirm that you want to add SSL name <strong>{{model.ssl_name}}</strong> to shared SSL certificate and confirm the domain control using {{(model.verification_method ==='url')?'URL': 'DNS'}} validation method
+    Please confirm that you want to add SSL name <strong>{{model.ssl_name}}</strong> to the shared SSL certificate and confirm the domain control using {{(model.verification_method ==='url')?'URL': 'DNS'}} validation method
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
@@ -37,7 +37,7 @@
             <label for="cert_name" class="col-sm-3 control-label">Regular or Wildcard Domain Name *</label>
             <div class="col-sm-9">
               <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.ssl_name" name="sslName" id="cert_name" placeholder="Domain Name" validate-domain-name-regular-or-wildcard-domains ng-maxlength="150" required>
-              <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter here a specific domain name (like “www.example.com”) or wildcard name (like “*.example.com”) to be added to shared SSL certificate. You should be able to verify the control of the domain name.">
+              <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter here a specific domain name (like “www.example.com”) or wildcard name (like “*.example.com”) to be added to the shared SSL certificate. You should be able to verify the control of the domain name.">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.sslName.$error" role="alert" ng-messages-multiple>
