More code for white-labeling feature

--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -115,7 +115,7 @@
                 <option value="report_only">Report Only</option>
                 <option value="off">Off</option>
               </select>
-              <label for="operation_mode" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Rev SDK operation mode">
+              <label for="operation_mode" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="SDK operation mode">
                 <i class="fa fa-question-circle"></i>
               </label>
             </div>
@@ -176,7 +176,7 @@
               </div>
             </div>
             <div class="form-group">
-            <label for="allowed_transport_protocols" class="text-info " popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Rev SDK allowed last mile transport protocols">
+            <label for="allowed_transport_protocols" class="text-info " popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="SDK allowed last mile transport protocols">
                 <i class="fa fa-question-circle"></i>
               </label>
               </div>
@@ -191,7 +191,7 @@
                 <option value="quic">QUIC</option>
                 <option value="rmp">RMP</option>
               </select>
-              <label for="initial_transport_protocol" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Rev SDK initial last mile transport protocol">
+              <label for="initial_transport_protocol" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="SDK initial last mile transport protocol">
                 <i class="fa fa-question-circle"></i>
               </label>
             </div>
