--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -101,7 +101,7 @@
                      validate-domain-name
                      placeholder="Origin Host Header"
                      required>
-              <label class=text-info" popover-trigger="mouseenter"  popover-append-to-body="true" uib-popover="Enter here a domain name to be used in 'Host' header of requests sent from RevAPM to
+              <label class=text-info" popover-trigger="mouseenter"  popover-append-to-body="true" uib-popover="Enter here a domain name to be used in 'Host' header of requests sent from the CDN to
  the origin server. The name might be different from origin server name/IP specified above. For example, if origin server IP is 11.11.11.11 and the origin HTTP server recognizes web requests for domain 'www.example.com' you will need to
 specify '11.11.11.11' in origin server name field above and 'www.example.com' in this field.">
                 <i class="fa fa-question-circle"></i>
