--- a/code/dev/parts/signup/billing_plans.html
+++ b/code/dev/parts/signup/billing_plans.html
@@ -11,7 +11,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="text-center col-md-4">
-                            <img class="img-responsive" src="images/logo_color.png" alt="Logo"/>
+                            <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo"/>
                         </div>
                         <div class="col-md-4 text-center "><h1 class="signup">Sign Up</h1></div>
                     </div>
