--- a/code/dev/parts/signup/resend.html
+++ b/code/dev/parts/signup/resend.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div id="logo">
-        <img src="images/logo_color.png" alt="Logo" />
+        <img src="images/{{vendor}}/logo_color.png" alt="Logo" />
       </div>
     </div>
   </div>
