--- a/code/dev/parts/help/contactus.html
+++ b/code/dev/parts/help/contactus.html
@@ -10,7 +10,7 @@
         <div class="panel-body">
           <p>
             Please click on the
-            <a href="https://revapm.zendesk.com/hc/en-us/requests/new" target="_blank">
+            <a href="{{vendorConfig.contactUsLink}}" target="_blank">
               <i class="glyphicon glyphicon-new-window"></i> link
             </a> to submit a support request to our 24x7 Customer Support center:
             <br>
@@ -24,7 +24,7 @@
                 <i class="glyphicon glyphicon-new-window"></i> Full documentation on the API service</a>
             </li>
             <li>
-              <a href="https://revapm.zendesk.com/hc/en-us" target="_blank">
+              <a href="{{vendorConfig.knowledgeBaseLink}}" target="_blank">
                 <i class="glyphicon glyphicon-new-window"></i> {{vendorConfig.companyNameShort}} Knowledge Base</a>
             </li>
             <li>
