--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -7,7 +7,7 @@
                     <div class="text-center col-xs-4">
                         <div class="header-logo">
                             <a href="https://www.revapm.com/" target="_blank">
-                                <img class="img-responsive" src="images/logo_color.png" alt="Logo"/>
+                                <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo"/>
                             </a>
                         </div>
                     </div>
