--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="text-center col-md-4">
             <a href="https://www.revapm.com/" target="_blank">
-              <img class="img-responsive" src="images/logo_color.png" alt="Logo" />
+              <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo" />
             </a>
           </div>
           <div class="col-md-4 text-center ">
