Fix latest bugs from google docs

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -1,5 +1,5 @@
 <section drawer ng-hide="isHide">
-  <a href="https://www.revapm.com/" id="logo" target="_blank">
+  <a href="{{vendorConfig.vendorUrl}}" id="logo" target="_blank">
     <img src="images/{{vendor}}/logo_color.png" alt="Logo" />
   </a>
   <ul class="side-menu">
