--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -3,7 +3,7 @@
 
     <div class="login_box">
       <div id="logo" class="logo block-center">
-        <a href="https://www.revapm.com/" target="_blank">
+        <a href="{{vendorConfig.vendorUrl}}" target="_blank">
           <img src="images/{{vendor}}/logo.png" alt="Logo">
         </a>
       </div>
