--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -24,7 +24,7 @@
                 <div class="col-xs-12 "></div>
               </div>
               <div class="form-group " ng-if="$state.current.data.platform_code=='iOS' ">
-                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to download the latest version of mobile SDK">
+                <a download="RevSDK.framework.zip " href="{{vendorConfig.sdk.download_links[$state.current.data.platform_code]}}" class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to download the latest version of mobile SDK">
                   <i class="glyphicon glyphicon-cloud-download "></i>&nbsp; Download SDK
                 </a>
               </div>
@@ -32,7 +32,7 @@
                 <div class="col-xs-12"></div>
               </div>
               <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
-                <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view SDK Introduction Video" _target="_blank" ng-click="onShowVideo($event, {youtubeId:introductionVideoYoutubeIDs[$state.current.data.platform_code]})">
+                <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view SDK Introduction Video" _target="_blank" ng-click="onShowVideo($event, {youtubeId:vendorConfig.sdk.introduction_video_youtube_ids[$state.current.data.platform_code]})">
                   <i class="fa fa-youtube"></i>&nbsp; Introduction Video
                 </a>
               </div>
