Fix latest preview comments

--- a/code/dev/parts/signup/form-short-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-signup.tpl.html
@@ -56,9 +56,9 @@
       <div class="form-group">
         <div class="text-center text-muted" style="margin-bottom: 10px">
           By clicking on Sign Up you agree with our
-          <a href="https://www.revapm.com/tos/" target="_blank">Terms Of Service</a>,
-          <a href="https://www.revapm.com/aup/" target="_blank">Acceptable Use Policy</a> and
-          <a href="https://www.revapm.com/privacy/" target="_blank">Privacy Policy</a>
+          <a href="{{vendorConfig.terms_of_service_link}}" target="_blank">Terms Of Service</a>,
+          <a href="{{vendorConfig.acceptable_use_policy_link}}" target="_blank">Acceptable Use Policy</a> and
+          <a href="{{vendorConfig.privacy_policy_link}}" target="_blank">Privacy Policy</a>
         </div>
         <div class="form-action center-block">
           <div class="text-center">
