--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -40,6 +40,7 @@
 
 </head>
 <body data-ng-app="revapm.Portal" class="hide-vertical-scroll">
+<div ng-hide="!!vendor" class="loader"></div>
 <link ng-if="vendor" rel="stylesheet" ng-href="css/{{vendor}}.css">
 
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
