--- a/code/dev/parts/signup/billing_plans.html
+++ b/code/dev/parts/signup/billing_plans.html
@@ -77,7 +77,7 @@
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                             <div class="">
-                                <p class="lead">Not sure which plan to choose? </p><a href="https://www.revapm.com/contact-us/" class="btn btn-info btn-lg">Talk to an expert</a>
+                                <p class="lead">Not sure which plan to choose? </p><a href="{{vendorConfig.contactSalesLink}}" class="btn btn-info btn-lg">Talk to an expert</a>
                             </div>
                         </div>
                     </div>
