--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -4,7 +4,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="text-center col-md-4">
-            <a href="https://www.revapm.com/" target="_blank">
+            <a href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
               <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo" />
             </a>
           </div>
