Use vendor configuration in zendesk.js and several html places

--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -6,7 +6,7 @@
                 <div class="col-sm-12">
                     <div class="text-center col-xs-4">
                         <div class="header-logo">
-                            <a href="https://www.revapm.com/" target="_blank">
+                            <a href="{{vendorConfig.vendorUrl}}" target="_blank">
                                 <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo"/>
                             </a>
                         </div>
