--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -62,7 +62,8 @@
 </script>-->
 <script src="https://www.youtube.com/iframe_api"></script>
 <!-- build:js scripts/vendor.js -->
-<script src="js/zendesk/zendesk.js"></script>
+<script zendesc-include></script>
+
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -138,6 +139,7 @@
 <script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
+
 <!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
 <!-- endbuild -->
 
@@ -164,6 +166,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/crud/crud.controller.js"></script>
 <script type="text/javascript" src="js/portal/shared/crud/pagination.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/zendesk-include.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
