--- a/code/dev/parts/signup/form-contact-info.tpl.html
+++ b/code/dev/parts/signup/form-contact-info.tpl.html
@@ -133,9 +133,9 @@
         <div class="col-md-8">
           <div class="pull-right" style="margin-bottom: 10px">
             By clicking on Sign Up you agree with our
-            <a href="https://www.revapm.com/tos/" target="_blank">Terms Of Service</a>,
-            <a href="https://www.revapm.com/aup/" target="_blank">Acceptable Use Policy</a> and
-            <a href="https://www.revapm.com/privacy/" target="_blank">Privacy Policy</a>
+            <a href="{{vendorConfig.terms_of_service_link}}" target="_blank">Terms Of Service</a>,
+            <a href="{{vendorConfig.acceptable_use_policy_link}}" target="_blank">Acceptable Use Policy</a> and
+            <a href="{{vendorConfig.privacy_policy_link}}" target="_blank">Privacy Policy</a>
           </div>
           <br>
           <div class="pull-right">
