--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -93,6 +93,10 @@
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="actions col-sm-1 col-lg-1 text-center">Actions</th>
+              <th class="col-sm-1 col-lg-1" ng-if="auth.isRevadmin()">
+                <a href="" ng-click="order('vendor_profile')">Vendor</a>
+                <span class="sortorder" ng-show="filter.predicate === 'vendor_profile'" ng-class="{reverse: filter.reverse}"></span>
+              </th>
             </tr>
             </thead>
             <tbody>
@@ -126,6 +130,9 @@
                 <a href="" ng-if="!item.loading" ng-class="{'disabled':isReadOnly()}" ng-click="deleteCompany(item)" uib-tooltip="Delete Company">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
+              </td>
+              <td ng-if="auth.isRevadmin()">
+                {{item.vendor_profile}}
               </td>
             </tr>
             </tbody>
