--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -46,6 +46,25 @@
               </div>
             </div>
           </div>
+          <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': createForm.vendor_profile.$invalid && createForm.comment.$dirty }">
+            <label for="vendor_profile" class="col-sm-2 control-label">Vendor Profile</label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 form-group">
+                <ui-select ng-model="model.vendor_profile" theme="select2" search-enabled="false" ng-animate-disabled ng-disabled="_loading" style="min-width: 550px;" id="vendor_profile" name="vendor_profile">
+                  <ui-select-match placeholder="Select Vendor Profile">{{model.vendor_profile}}</ui-select-match>
+                  <ui-select-choices repeat="item in vendorProfiles">
+                    <div ng-bind-html="item"></div>
+                  </ui-select-choices>
+                </ui-select>
+                <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Vendor Profile TODO REVIEW TEXT">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
+              <div class="error-messages" ng-messages="createForm.vendor_profile.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
+            </div>
+          </div>
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
